--- a/node_pie/node_def_files/addons/ScriptingNodesTree.jsonc
+++ b/node_pie/node_def_files/addons/ScriptingNodesTree.jsonc
@@ -1,7 +1,7 @@
 // For more info about how to use this file, use the "Open Example File" operator in the right click menu of the node editor
 // You'll need Node Pie developer extras to be enabled in the preferences to see it.
 
-// The config for the Serpens node editor
+// The config for the Serpens node editor, big thanks to @ADRs on Blender Artists for making it :)
 
 {
   "layout": {
