--- a/node_pie/node_def_files/node_def_example.jsonc
+++ b/node_pie/node_def_files/node_def_example.jsonc
@@ -58,5 +58,9 @@
         { "identifier": "SN_TimestampNode" }
       ]
     }
-  }
+  },
+  // This will add the imported files on top of the config specified in this file
+  // There can be multiple given in the list to be added one on top of each other.
+  // The name should just be the name of the definition file with out the file extension.
+  "imports": ["other_def_file"]
 }
